# paircomp

./: .cvsignore  .gitignore  .svnignore  BUILD.txt  CMakeLists.txt  Doxyfile  Makefile  README.txt  TODO
doc/: .cvsignore  Makefile  index.html  index.txt  python-api.html  python-api.txt
doc/theory/: .cvsignore  Makefile  paircomp-theory.tex  seqcomp-score.py
doc/theory/R/: bestmatches-20.ps  bestmatches-50.ps  calc-thresholds.R  diverge.R  divergedist-20.ps  divergedist-50.ps  matches.R  plots.R  pretty-print-thresholds.py  print-thresholds-dict.py  threshold_str.py  trials.ps  window=20.ps  window=50.ps
examples/: build-pairview-xml.py  plot-pdf.py
lib/: .cvsignore  .svnignore  CMakeLists.txt  Comparison.hh  ImmutableComparison.cc  ImmutableComparison.hh  Makefile  Makefile.deps  Match.hh  MutableComparison.cc  MutableComparison.hh  NwayComparison.cc  NwayComparison.hh  algorithms.cc  algorithms.hh  algorithms2.cc  algorithms2.hh  paircomp.hh
lib/c++-tests/: .cvsignore  .svnignore  3way.cc  CMakeLists.txt  Makefile  test-empty.cc  test-transit.cc
python/: .cvsignore  .svnignore  CMakeLists.txt  setup.py
python/c++-ext/: _paircomp_algorithms.cc  _paircomp_parser.cc  _paircomp_renderer.cc
python/paircomp/: .cvsignore  __init__.py  algorithms.py  nway.py  objects.py  parser.py  renderer.py
scripts/: paircomp-to-sister.py  seqcomp-to-paircomp.py  seqcomp-to-sister.py
tests/: .cvsignore  README.txt  __init__.py  _testdir.py  br.txt  el.txt  fasta.py  lvotx-start.txt  nway-stuff.py  nway.py  orig-el-br.txt  py_nway.py  re.txt  run-tests.sh  run-valgrind  seqcomp-a.txt  spotx-start.txt  t1.fa  t2.fa  t3.fa  test-1bp-matches.py  test-1bp-matches.py~  test-compare-mussa.py  test-compare-mussa.py~  test-errors.py  test-errors.py~  test-memory-free.py  test-nway.py  test-python-interface.py  test-regress.py  test-regress.py~  test-transitive-2.py  test-transitive.py  test-transitive.py~  test-very-slow-3way.py  test-very-slow-3way.py~
tests/regression-data/: delta-lv.txt  delta-sp.txt  delta-v0.8.cmp  delta-v0.9.cmp  gcm-lv.txt  gcm-sp.txt  gcm-v0.8.cmp  gcm-v0.9.cmp  make.sh  otx-lv.txt  otx-sp.txt  otx-v0.8.cmp  otx-v0.9.cmp
